--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "nodemon src/index.js",
     "start": "node src/index.js",
-    "test": "jest"
+    "test": "ava"
   },
   "repository": {
     "type": "git",
@@ -36,7 +36,7 @@
     "sequelize": "^6.35.1"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
+    "ava": "^5.3.1",
     "nodemon": "^3.0.1"
   }
 }
