--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
   },
   "homepage": "https://github.com/bryanbill/ros-auth#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "bull": "^4.11.5",
     "chalk": "^5.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
