--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "homepage": "https://github.com/bryanbill/ros-auth#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "bull": "^4.11.5",
+    "bullmq": "^4.16.0",
     "chalk": "^5.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
