--- a/package.json
+++ b/package.json
@@ -32,13 +32,15 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "fast-xml-parser": "^4.3.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.7",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "redis": "^4.6.10",
-    "sequelize": "^6.35.1"
+    "sequelize": "^6.35.1",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "ava": "^5.3.1",
